# lateral-controller

./: CMakeLists.txt  package.xml
include/: CarConstants.h  Controller.h  FeedForward.h  Feedback.h  LateralNodeException.h  LateralROSNode.h  Point.h
sample_eigen_code/: eigentutorial.cpp
src/: CarConstants.cpp  Controller.cpp  FeedForward.cpp  Feedback.cpp  LateralROSNode.cpp  gains.txt  main.cpp
